# debug-django

./: docker-compose.yml
book/book/: settings.py
book/oneauthor/: apps.py
book_module/: MANIFEST.in  setup.cfg
book_module/book/book/: settings.py
book_module/book/oneauthor/: models.py
book_module/book/oneauthor/migrations/: 0001_initial.py
book_module/book/onebook/: apps.py  models.py
book_module/book/onebook/migrations/: 0001_initial.py
book_module/debug_django_book.egg-info/: PKG-INFO  SOURCES.txt
library_module/: MANIFEST.in  README.rst  setup.cfg
