[metadata]
name = debug-django-book
version = 0.1
description = Book management
long_description = file: README.rst
url = https://www.batvoice.com
author = Batvoice Technologies 
author_email = contact@batvoice.com 
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
